--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,5 +17,145 @@
         <li>React.js</li>
         <li>Semantic ui</li>
     </ul>
+</body>
+</html> -->
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
+http://templated.co
+Released for free under the Creative Commons Attribution License
+
+Name       : StylePrecision 
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20130720
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>Mino's homepage</title>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css' />
+<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="jquery.slidertron-1.1.js"></script>
+</head>
+<body>
+<div id="wrapper">
+	<div id="page" class="container">
+		<div id="header" class="container">
+			<div id="logo">
+				<h1><a href="#">Minho Yeo</a></h1>
+			</div>
+			<div id="menu">
+				<ul>
+					<li class="current_page_item"><a href="#">Home</a></li>
+					<li><a href="#">works</a></li>
+					<li><a href="#">TIL</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
+			</div>
+		</div>
+		<!-- <div id="banner">
+			<div id="slider">
+				<div class="viewer">
+					<div class="reel">
+						<div class="slide"> <img src="images/pic01.png" alt="" /> </div>
+						<div class="slide"> <img src="images/pic02.png" alt="" /> </div>
+					</div>
+				</div>
+			</div>
+			<script type="text/javascript">
+				$('#slider').slidertron({
+					viewerSelector: '.viewer',
+					reelSelector: '.viewer .reel',
+					slidesSelector: '.viewer .reel .slide',
+					advanceDelay: 3000,
+					speed: 'slow'
+				});
+			</script> 
+		</div> -->
+		<div id="content">
+			<div class="title">
+                <br/>
+                <h2>Welcome.</h2>
+                <br/>
+				<span class="byline"></span> </div>
+			<p>Hello, I'm Minho.</p>
+			<div id="two-column">
+				<div id="tbox1">
+					<div class="title">
+						<h2>Works</h2>
+					</div>
+					<p>These are what I have done so far to improve my skill, which is still going on.<br>
+                        If anyone wants to see more about it, please click the button below to check it out.
+                    </p>
+					<ul class="style2">
+						<li><a href="#">HTML</a></li>
+						<li><a href="#">CSS</a></li>
+						<li><a href="#">JAVASCRIPT</a></li>
+						<li><a href="#">REACT</a></li>
+						<li><a href="#">MOBX</a></li>
+					</ul>
+					<a href="#" class="icon icon-file-alt button">Read More</a> </div>
+				<!-- <div id="tbox2">
+					<div class="title">
+						<h2>Maecenas luctus</h2>
+					</div>
+					<p>Etiam non felis. Donec ut ante. In id eros. Sed dictum rutrum massa eu volutpat. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+					<ul class="style2">
+						<li><a href="#">Semper mod quis eget mi dolore</a></li>
+						<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+						<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+						<li><a href="#">Consequat etiam lorem phasellus</a></li>
+						<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					</ul>
+					<a href="#" class="icon icon-ok button">Read More</a> </div> -->
+			</div>
+        </div>
+        <br/>
+		<div id="sidebar">
+			<div class="box1">
+				<div class="title">
+					<h2>About me</h2>
+				</div>
+				<ul class="style2">
+                    <strong><p text-indent= "-2em">Minho Yeo</p></strong>
+					<li><a href="#">ymh254@gmail.com</a></li>
+					<li><p>Suwon, Korea</p></li>
+					<br>
+					<li><a href="#">Github</a></li>
+					<li><a href="#">Blog</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Linkedin</a></li>
+				</ul>
+			</div>
+			<!-- <div class="box2">
+				<div class="title">
+					<h2>Integer gravida</h2>
+				</div>
+				<ul class="style2">
+					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+					<li><a href="#">Ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quis eget mi dolore</a></li>
+					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
+					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+					<li><a href="#">Semper mod quisturpis nisi</a></li>
+					<li><a href="#">Consequat etiam lorem phasellus</a></li>
+				</ul>
+					<a href="#" class="icon icon-file-alt button">Read More</a> </div>
+			</div> -->
+		</div>
+	</div>
+	<!-- end #page --> 
+</div>
+<div id="footer">
+	<p>&copy; Untitled. All rights reserved.<!--| Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.--></p>
+</div>
+<!-- end #footer -->
 </body>
 </html>
